--- a/css/layout.css
+++ b/css/layout.css
@@ -12,71 +12,113 @@ div p{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-@media (max-width:768px){
+#a,#b,#c,#d,#e,#f,#g,#h,#i{
+    width: 100%;
+    height: 100%;
+}
+@media (max-width:480px){
     .container{
-        margin: auto;
-        width: 480px;
-        height: 1055px;
+        width:90%;
+        height: 100%;
+        display: grid;
+        grid-template-rows: 75px 150px 125px 125px 250px 250px 80px ;
+        grid-template-columns: 1fr 1fr;
     }
     #a{
-        margin: auto;
-        width: 480px;
-        height:75px;
+        grid-column: 1/3;
+        grid-row: 1;
     }
-    
     #b{
-        width:480px ;
-        height:150px;
-
+        grid-column: 1/3;
+        grid-row: 2;
     }
-    #c , #d{
-        width: 480px;
-        height: 125px;
+    #c{
+        grid-column: 1/3;
+        grid-row: 3;
     }
-    
-    #e ,#f , #g , #h{
-        width: 240px;
-        height: 250px;
-        float: left;
+    #d{
+        grid-column: 1/3;
+        grid-row: 4;
     }
-
     #i{
-        width:480px;
-        height: 80px;
-        float: left;
+        grid-column: 1/3;
+        grid-row: 7;
     }
 }
 
-@media (min-width:768px){
+@media (max-width:768px) and (min-width:480px){
     .container{
-        margin: auto;
-        width: 960px;
-        height: 700px;
+        margin: 0 auto 0 0;
+        width:  100%;
+        height: 100vh;
+        display: grid;
+        grid-template-rows: 10fr repeat(3 , 8fr) 12fr ;
+        grid-template-columns: 1fr 2fr 2fr;
     }
     #a{
-        margin: auto;
-        width: 960px;
-        height:100px;
+        grid-column: 1/6;
+        grid-row: 1;
     }
     #b{
-        width:200px ;
-        height: 600px;
-        float: left;
-    }#c,#d{
-        width: 380px;
-        height: 200px;
-        float: left;
+        grid-column: 1;
+        grid-row: 2/6;
     }
-
- 
-    #e,#f,#g,#h{
-        width: 190px;
-        height: 250px;
-        float: left;
+    #c{
+        grid-column: 2/3;
+        grid-row: 2;
+    }
+    #d{
+        grid-column: 3/4;
+        grid-row: 2;
+    }
+    #e{
+        grid-column: 2/3;
+        grid-row: 3;
+    }
+    #f{
+        grid-column: 3/4;
+        grid-row: 3;
+    }
+    #g{
+        grid-column: 2/3;
+        grid-row: 4;
+    }
+    #h{
+        grid-column: 3/4;
+        grid-row: 4;
     }
     #i{
-        width: 760px;
-        height:150px;
-        float: left;
+        grid-column: 2/6;
+        grid-row: 5;
+    }
+}
+
+@media (min-width:769px){
+    .container{
+        width: 70%;
+        height: 100vh;
+        display: grid;
+        grid-template-rows: 10fr 20fr 25fr 15fr ;
+        grid-template-columns: 4fr repeat( 4 , 3fr) ;
+    }
+    #a{
+        grid-column: 1/6;
+        grid-row: 1;
+    }
+    #b{
+        grid-column: 1;
+        grid-row: 2/5;
+    }
+    #c{
+        grid-column: 2/4;
+        grid-row: 2;
+    }
+    #d{
+        grid-column: 4/6;
+        grid-row: 2;
+    }
+    #i{
+        grid-column: 2/6;
+        grid-row: 4;
     }
 }
